rust/macros/tests/invalid/target/rls/debug/deps/only_arrow_rs-af3a3a2c958f7c2c.d
e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\only_arrow_rs-af3a3a2c958f7c2c.rmeta: only-arrow.rs

e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\only_arrow_rs-af3a3a2c958f7c2c.d: only-arrow.rs

only-arrow.rs:
